--- a/sass/sass.css
+++ b/sass/sass.css
@@ -1,1 +1,39 @@
-/* No CSS *//*# sourceMappingURL=sass.css.map */
+* {
+  padding: 5px;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  min-height: 200px;
+  background-color: #191919;
+  text-align: center;
+  color: #fff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer h3 {
+  padding: 30px;
+  margin-right: 50px;
+}
+
+footer ul {
+  list-style-type: none;
+  width: 20%;
+}
+
+footer ul li {
+  border-left: 1px solid white;
+  text-align: left;
+  padding-left: 15px;
+}
+
+footer ul li:first-child {
+  font-size: 1.5rem;
+  border-left: 4px solid red;
+}
+/*# sourceMappingURL=sass.css.map */
