--- a/sass/sass.css
+++ b/sass/sass.css
@@ -1,8 +1,13 @@
-* {
-  padding: 5px;
+html, body {
+  padding: 0;
+  margin: 0;
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,26 +19,69 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 footer h3 {
   padding: 30px;
-  margin-right: 50px;
+  padding-top: 5px;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 footer ul {
   list-style-type: none;
   width: 20%;
+  text-align: left;
+}
+
+footer ul a {
+  font-size: 1.5rem;
+  padding: 10px;
+  margin-left: -1px;
+}
+
+footer ul a:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 footer ul li {
   border-left: 1px solid white;
   text-align: left;
+  padding: 5px;
   padding-left: 15px;
+  overflow: hidden;
 }
 
 footer ul li:first-child {
   font-size: 1.5rem;
-  border-left: 4px solid red;
+  padding-bottom: 5px;
+}
+
+footer ul li:hover {
+  cursor: pointer;
+  opacity: .8;
+}
+
+footer ul li:nth-child(2) {
+  margin-top: 10px;
+}
+
+#company {
+  border-left: 5px solid #00c2e9;
+}
+
+#knowledge {
+  border-left: 5px solid #109991;
+}
+
+#resources {
+  border-left: 5px solid #df5557;
+}
+
+#getInTouch {
+  border-left: 5px solid #9367a5;
 }
 /*# sourceMappingURL=sass.css.map */
